--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
-djangorestframework
-requests
-beautifulsoup4
 certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+colorama==0.4.0
+cryptography==2.3.1
 Django==2.0.5
+django-crontab==0.7.1
+django-filter==2.0.0
+httpie==1.0.0
+idna==2.7
+isort==4.3.9
+lazy-object-proxy==1.3.1
+lxml==4.2.5
+Markdown==3.0.1
+mccabe==0.6.1
+mysql-connector-python==8.0.12
+mysqlclient==1.3.13
+protobuf==3.6.0
+pycparser==2.18
+PyExecJS==1.5.1
+Pygments==2.2.0
+pylint==2.3.0
+pyOpenSSL==18.0.0
+PySocks==1.6.8
 pytz==2018.5
+qiniu==7.2.2
+requests==2.19.1
 selenium==3.14.0
 urllib3==1.23
 wincertstore==0.2
