--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+asn1crypto==0.24.0
+astroid==2.2.5
+beautifulsoup4==4.7.1
+bs4==0.0.1
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
@@ -6,6 +10,7 @@ cryptography==2.3.1
 Django==2.0.5
 django-crontab==0.7.1
 django-filter==2.0.0
+djangorestframework==3.9.4
 httpie==1.0.0
 idna==2.7
 isort==4.3.9
@@ -20,11 +25,16 @@ pycparser==2.18
 PyExecJS==1.5.1
 Pygments==2.2.0
 pylint==2.3.0
+PyMySQL==0.9.3
 pyOpenSSL==18.0.0
 PySocks==1.6.8
 pytz==2018.5
 qiniu==7.2.2
 requests==2.19.1
 selenium==3.14.0
+six==1.12.0
+soupsieve==1.9.1
+typed-ast==1.3.5
 urllib3==1.23
 wincertstore==0.2
+wrapt==1.11.1
