--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\perry\\Anaconda3\\python.exe"
+    "python.pythonPath": "/Users/perry/anaconda3/bin/python"
 }
